removed memory settings from pom