@@ -298,12 +298,6 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <fork>true</fork>
-                    <meminitial>128m</meminitial>
-                    <maxmem>1024m</maxmem>
-                    <compilerArgs>
-                        <arg>-XX:MaxPermSize=256m</arg>
-                    </compilerArgs>
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
@@ -354,7 +348,6 @@
                 <version>2.19</version>
                 <configuration>
                     <skipTests>true</skipTests>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
